--- a/inst/scripts/setup.Rnw
+++ b/inst/scripts/setup.Rnw
@@ -16,7 +16,8 @@ library(GenomicRanges)
 Specify where to store and look for intermediate files.
 
 <<outdir>>=
-outdir <- "/amber1/scratch/rscharpf/beaty_beadStudio"
+outdir <- "/amber1/archive/ctsa/beaty_crlmm/beaty_beadStudio"
+##outdir <- "/amber1/scratch/rscharpf/beaty_beadStudio"
 if(!file.exists(outdir)) dir.create(outdir)
 ldPath(outdir)
 ocSamples(100)
